added di modules, fixed use case

--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.fragments.MainScreenFragment">
+    tools:context=".presentation.fragments.mainscreen.MainScreenFragment">
 
     <TextView
         android:id="@+id/tvAppName"
@@ -18,49 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/llCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAppName">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/c_last"
-            android:textSize="@dimen/c_size"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/app_name_color"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/c_random"
-            android:textSize="@dimen/c_size"
-            android:textColor="@color/app_name_color"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/c_best"
-            android:textSize="@dimen/c_size"
-            android:layout_marginStart="20dp"
-            android:textColor="@color/app_name_color"/>
-    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/gifPlaceholder"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="24dp"
-        android:background="@color/purple_700"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llCategory" />
+        app:layout_constraintTop_toBottomOf="@id/tvAppName" />
 
     <TextView
         android:id="@+id/tvDescription"
@@ -77,22 +43,24 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="58dp"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="24dp"
         android:text="@string/btn_back"
+        android:textSize="@dimen/btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="58dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:text="@string/btn_next"
+        android:textSize="@dimen/btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
