--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,8 +12,7 @@
         tools:layout="@layout/fragment_wrapper" >
         <action
             android:id="@+id/action_wrapperFragment_to_mainScreenFragment"
-            app:destination="@id/mainScreenFragment"
-            app:popUpToInclusive="false"/>
+            app:destination="@id/mainScreenFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainScreenFragment"
